--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(tasks: List[Task], taskForm: Form[String])
+@(usuario: String, tasks: List[Task], taskForm: Form[String])
 
 @import helper._
 
@@ -19,7 +19,7 @@
 
 	<h2>Add a new task</h2>
 
-	@form(routes.Application.newTask){
+	@form(routes.Application.newTask(usuario)){
 		@inputText(taskForm("label"))
 
 		<input type="submit" value="Create">
